<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical"
    tools:context=".Ciudades">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txt_bienvenida"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/bMexico"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/ciudad"
        android:textSize="24sp" />

    <Button
        android:id="@+id/bCanada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clima_canada"
        android:textSize="24sp" />
</LinearLayout>