<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/grados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/grados"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/ciudad"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/grados"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/ciudad"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/estatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ciudad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/clima"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

</RelativeLayout>